--- a/loja-admin/package.json
+++ b/loja-admin/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fluentui/react": "^8.92.1",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.54.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
