--- a/service-account/package.json
+++ b/service-account/package.json
@@ -1,22 +1,25 @@
 {
-    "name": "service-account",
-    "version": "1.0.0",
-    "main": "index.js",
-    "license": "MIT",
-    "scripts": {
-      "dev": "ts-node-dev src/server.ts --transpile-only --ignore-watch node_modules --respawn"
-    },
-    "dependencies": {
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.2",
-      "express": "^4.18.1",
-      "firebase": "^9.9.3"
-    },
-    "devDependencies": {
-      "@types/cors": "^2.8.12",
-      "@types/express": "^4.17.13",
-      "@types/node": "^18.6.5",
-      "ts-node-dev": "^2.0.0",
-      "typescript": "^4.7.4"
-    }
+  "name": "service-account",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev src/server.ts --transpile-only --ignore-watch node_modules --respawn"
+  },
+  "dependencies": {
+    "amqplib": "^0.10.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "firebase": "^9.9.3",
+    "firebase-admin": "^11.0.1"
+  },
+  "devDependencies": {
+    "@types/amqplib": "^0.10.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.6.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
   }
+}
